// Vitest Snapshot v1

exports[`<SourceType /> > should render 1`] = `
<InputGroup>
  <InputLabel>
    Source Type
  </InputLabel>
  <InputSelect
    onChange={[MockFunction spy]}
    value="Bar"
  >
    <option
      key="default"
      value="unknown"
    >
      Unknown
    </option>
    <option
      key="foo"
      value="Foo"
    >
      Foo
    </option>
    <option
      key="bar"
      value="Bar"
    >
      Bar
    </option>
  </InputSelect>
</InputGroup>
`;

exports[`<SourceType /> > should render when [restrictSourceTypes=false] 1`] = `
<InputGroup>
  <InputLabel>
    Source type
  </InputLabel>
  <Input
    onChange={[MockFunction spy]}
    value="Bar"
  />
</InputGroup>
`;
